Удаление пользователей и фильмов с проверкой существования